# OS

./: text.txt
KP/: CMakeLists.txt
KP/docs/: report.docx
KP/include/: check_err.hpp  constants.hpp  instructions.hpp
KP/src/: client.cpp  server.cpp
LR1/: CMakeLists.txt
LR1/CMake/: CMakeLists.txt
LR1/docs/: report.docx
LR1/src/: child.c  parent.c
LR2/docs/: report.docx
LR2/src/: child.c  parent.c
LR3/: CMakeLists.txt
LR3/docs/: report.docx
LR3/src/: threads.c
LR4/: CMakeLists.txt
LR4/docs/: report.docx
LR4/src/: file_mapping.c
LR5/: CMakeLists.txt
LR5/docs/: report.docx
LR5/include/: functions.h
LR5/src/: functions1.c  functions2.c  program1.c  program2.c
LR6-8/: CMakeLists.txt
LR6-8/docs/: report.docx
LR6-8/src/: client  compile.txt  distribution_node.cpp  server  server0
